@@ -1,5 +1,6 @@
 * New Summary Taxes Report
 * Ability to add item level description at sale
 * Ability to add serial number for an item at sale
+* Ability to search by item number in the sales interface
 * Added Quantity Purchased to Items Report
 * Bug Fixes and better error detection
